--- a/BA-review-analysis.ipynb
+++ b/BA-review-analysis.ipynb
@@ -13,7 +13,7 @@
    "id": "050a6f06",
    "metadata": {},
    "source": [
-    "Scraping Reviews from the web, cleaning data, and analyses of Data: I wrote the Python code in Google Colab, cleaned data in Excel, and made a ppt. Here is the code:"
+    "Scraping Reviews from the web, cleaning data, and analyses of Data: I wrote the Python code in Jupyter Notebook, cleaned data in Excel, and made a ppt(For my presentation, check out my Linkedin). Here is the code:"
    ]
   },
   {
